// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Android returns fontFamily-Regular and weight = undefined for normal 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
  style={
    Object {
      "fontFamily": "Arial-Regular",
      "fontWeight": undefined,
    }
  }
/>
`;

exports[`flattens styles 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
  style={
    Object {
      "fontFamily": "Arial-Regular",
      "fontWeight": undefined,
      "margin": 20,
      "paddingHorizontal": 10,
    }
  }
/>
`;

exports[`iOS returns fontFamily and weight for normal 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
  style={
    Object {
      "fontFamily": "Arial",
      "fontWeight": "normal",
    }
  }
/>
`;
